--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,12 @@ h3 {
   text-align: center;
 }
 
+#line-chart-title {
+  font-size: 18px;
+  text-align: center;
+  padding-bottom: -10px;
+}
+
 .linePlot {
   /* background-color; */
   padding-top: 20px;
